--- a/view/css/mod_wiki.css
+++ b/view/css/mod_wiki.css
@@ -41,6 +41,7 @@
 #wikis-index th:nth-child(3),
 #wikis-index td:nth-child(3){
 	padding: 7px 10px 7px 7px;
+	white-space: nowrap;
 }
 
 #wikis-index th:nth-child(4),
